add InvalidTransactionMetadata and SigTransactionMetadata that implement TransactionMetadata
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>